# cplusplus-prj

./: CMakeLists.txt  README.md  README_EN.md  README_VI.md  run.sh
includes/: common.h  math_utils.h
inputs/: input_3.txt
solutions/: solution_1.txt  solution_2.txt  solution_3.txt
src/: main.cpp  math_utils.cpp
